--- a/arch/arm/boot/dts/imx6ul-phytec-phycore-som.dtsi
+++ b/arch/arm/boot/dts/imx6ul-phytec-phycore-som.dtsi
@@ -35,6 +35,32 @@
 			linux,default-trigger = "heartbeat";
 		};
 	};
+
+	reg_gpio_dvfs: regulator-gpio {
+		compatible = "regulator-gpio";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_dvfs>;
+		regulator-min-microvolt = <1300000>;
+		regulator-max-microvolt = <1400000>;
+		regulator-ramp-delay = <500>;
+		regulator-name = "gpio_dvfs";
+		regulator-type = "voltage";
+		gpios = <&gpio4 14 GPIO_ACTIVE_HIGH>;
+		gpios-states = <0>;
+		states = <1300000 0x1 1400000 0x0>;
+		enable-at-boot;
+	};
+};
+
+&cpu0 {
+	dc-supply = <&reg_gpio_dvfs>;
+	fsl,soc-operating-points = <
+		/* KHz	uV */
+		696000	1275000
+		528000	1250000
+		396000	1250000
+		198000	1250000
+	>;
 };
 
 &fec1 {
@@ -99,6 +125,12 @@
 };
 
 &iomuxc {
+	pinctrl_dvfs: dvfsgrp {
+		fsl,pins = <
+			MX6UL_PAD_NAND_CE1_B__GPIO4_IO14	0x79
+		>;
+	};
+
 	pinctrl_enet1: enet1grp {
 		fsl,pins = <
 			MX6UL_PAD_GPIO1_IO07__ENET1_MDC		0x10010
