--- a/arch/arm/boot/dts/imx6ull-phytec-phycore-som.dtsi
+++ b/arch/arm/boot/dts/imx6ull-phytec-phycore-som.dtsi
@@ -11,6 +11,17 @@
 	compatible = "phytec,imx6ull-pcl063", "fsl,imx6ull";
 };
 
+&cpu0 {
+	fsl,soc-operating-points = <
+		/* KHz	uV */
+		900000	1250000
+		792000	1250000
+		528000	1250000
+		396000	1250000
+		198000	1250000
+	>;
+};
+
 &iomuxc {
 	/delete-node/ gpioledssomgrp;
 };
