--- a/arch/arm/boot/dts/imx6ull-phytec-segin-ff-rdk-emmc.dts
+++ b/arch/arm/boot/dts/imx6ull-phytec-segin-ff-rdk-emmc.dts
@@ -8,6 +8,7 @@
 #include "imx6ull.dtsi"
 #include "imx6ull-phytec-phycore-som.dtsi"
 #include "imx6ull-phytec-segin.dtsi"
+#include "imx6ull-phytec-segin-peb-av-02.dtsi"
 #include "imx6ull-phytec-segin-peb-eval-01.dtsi"
 
 / {
@@ -21,10 +22,6 @@
 };
 
 &can1 {
-	status = "okay";
-};
-
-&tlv320 {
 	status = "okay";
 };
 
@@ -69,6 +66,10 @@
 };
 
 &sound {
+	status = "okay";
+};
+
+&tlv320 {
 	status = "okay";
 };
 
