--- a/arch/arm/boot/dts/imx6ull-phytec-segin-lc-rdk-nand.dts
+++ b/arch/arm/boot/dts/imx6ull-phytec-segin-lc-rdk-nand.dts
@@ -8,6 +8,7 @@
 #include "imx6ull.dtsi"
 #include "imx6ull-phytec-phycore-som.dtsi"
 #include "imx6ull-phytec-segin.dtsi"
+#include "imx6ull-phytec-segin-peb-av-02.dtsi"
 #include "imx6ull-phytec-segin-peb-eval-01.dtsi"
 
 / {
