--- a/arch/arm/boot/dts/imx6qdl-phytec-pfla02.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-phytec-pfla02.dtsi
@@ -492,6 +492,13 @@
 		>;
 	};
 
+	pinctrl_i2c_gpio: pinctrli2cgpiogrp {
+		fsl,pins = <
+			MX6QDL_PAD_KEY_ROW3__GPIO4_IO13		0x1b0b0
+			MX6QDL_PAD_KEY_COL3__GPIO4_IO12		0x1b0b0
+		>;
+	};
+
 	pinctrl_i2c1: i2c1grp {
 		fsl,pins = <
 			MX6QDL_PAD_EIM_D21__I2C1_SCL		0x4001b8b1
