--- a/arch/arm/configs/imx6_phytec_platform.config
+++ b/arch/arm/configs/imx6_phytec_platform.config
@@ -19,3 +19,5 @@ CONFIG_VIDEO_MT9P031=y
 CONFIG_VIDEO_MT9V032=y
 CONFIG_VIDEO_ADV_DEBUG=y
 CONFIG_DRM_ETNAVIV=m
+CONFIG_MXC_PXP_V3=y
+CONFIG_MXC_PXP_CLIENT_DEVICE=y
