ARM: dts: imx6: phyflex/phycard: Add support for i2c bus recovery
Enable i2c bus recovery feature for phyFLEX- and phyCARD-modules.

Signed-off-by: Yunus Bas <y.bas@phytec.de>
Signed-off-by: Christian Hemp <c.hemp@phytec.de>

--- a/arch/arm/boot/dts/imx6qdl-phytec-phycard-som.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-phytec-phycard-som.dtsi
@@ -61,8 +61,11 @@
 };
 
 &i2c1 {
-	pinctrl-names = "default";
+	pinctrl-names = "default", "gpio";
 	pinctrl-0 = <&pinctrl_i2c1>;
+	pinctrl-1 = <&pinctrl_i2c1_gpio>;
+	scl-gpios = <&gpio3 21 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
+	sda-gpios = <&gpio3 28 (GPIO_ACTIVE_HIGH | GPIO_OPEN_DRAIN)>;
 	status = "okay";
 
 	eeprom: eeprom@50 {
@@ -192,6 +195,13 @@
 		fsl,pins = <
 			MX6QDL_PAD_EIM_D21__I2C1_SCL		0x4001b8b1
 			MX6QDL_PAD_EIM_D28__I2C1_SDA		0x4001b8b1
+		>;
+	};
+
+	pinctrl_i2c1_gpio: i2c1gpiogrp {
+		fsl,pins = <
+			MX6QDL_PAD_EIM_D21__GPIO3_IO21		0x4001b8b1
+			MX6QDL_PAD_EIM_D28__GPIO3_IO28		0x4001b8b1
 		>;
 	};
 
